preprocess some features

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "      <td>Action</td>\n",
        "      <td>50000000</td>\n",
        "      <td>69400000</td>\n",
-       "      <td>50.00</td>\n",
+       "      <td>50.0</td>\n",
        "      <td>69.23</td>\n",
        "      <td>19400000</td>\n",
        "      <td>0</td>\n",
@@ -64,244 +64,25 @@
        "      <td>2016</td>\n",
        "      <td>7.4</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>16 Blocks</td>\n",
-       "      <td>Richard Donner</td>\n",
-       "      <td>102</td>\n",
-       "      <td>Bruce Willis</td>\n",
-       "      <td>David Zayas</td>\n",
-       "      <td>Sasha Roiz</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>52000000</td>\n",
-       "      <td>65000000</td>\n",
-       "      <td>33.33</td>\n",
-       "      <td>50.00</td>\n",
-       "      <td>13000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>6.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>17 Again</td>\n",
-       "      <td>Burr Steers</td>\n",
-       "      <td>102</td>\n",
-       "      <td>Matthew Perry</td>\n",
-       "      <td>Hunter Parrish</td>\n",
-       "      <td>Thomas Lennon</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>20000000</td>\n",
-       "      <td>139000000</td>\n",
-       "      <td>44.44</td>\n",
-       "      <td>25.00</td>\n",
-       "      <td>119000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>6.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1982</td>\n",
-       "      <td>Tommy Oliver</td>\n",
-       "      <td>90</td>\n",
-       "      <td>Bokeem Woodbine</td>\n",
-       "      <td>Ruby Dee</td>\n",
-       "      <td>Quinton Aaron</td>\n",
-       "      <td>Drama</td>\n",
-       "      <td>1000000</td>\n",
-       "      <td>2000000</td>\n",
-       "      <td>50.00</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>1000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>7.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2 Fast 2 Furious</td>\n",
-       "      <td>John Singleton</td>\n",
-       "      <td>107</td>\n",
-       "      <td>Paul Walker</td>\n",
-       "      <td>Cole Hauser</td>\n",
-       "      <td>Mo Gallini</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>76000000</td>\n",
-       "      <td>236000000</td>\n",
-       "      <td>75.00</td>\n",
-       "      <td>42.85</td>\n",
-       "      <td>160000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>5.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2 Guns</td>\n",
-       "      <td>Baltasar Kormákur</td>\n",
-       "      <td>109</td>\n",
-       "      <td>Denzel Washington</td>\n",
-       "      <td>Patrick Fischler</td>\n",
-       "      <td>Fred Ward</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>61000000</td>\n",
-       "      <td>132000000</td>\n",
-       "      <td>66.67</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>71000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>6.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2012</td>\n",
-       "      <td>Roland Emmerich</td>\n",
-       "      <td>158</td>\n",
-       "      <td>Oliver Platt</td>\n",
-       "      <td>Liam James</td>\n",
-       "      <td>Tom McCarthy</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>200000000</td>\n",
-       "      <td>800000000</td>\n",
-       "      <td>63.88</td>\n",
-       "      <td>50.00</td>\n",
-       "      <td>600000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>5.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>21</td>\n",
-       "      <td>Robert Luketic</td>\n",
-       "      <td>123</td>\n",
-       "      <td>Kevin Spacey</td>\n",
-       "      <td>Jim Sturgess</td>\n",
-       "      <td>Josh Gad</td>\n",
-       "      <td>Crime</td>\n",
-       "      <td>35000000</td>\n",
-       "      <td>81000000</td>\n",
-       "      <td>61.00</td>\n",
-       "      <td>66.67</td>\n",
-       "      <td>46000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>6.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>22 Jump Street</td>\n",
-       "      <td>Phil Lord</td>\n",
-       "      <td>112</td>\n",
-       "      <td>Channing Tatum</td>\n",
-       "      <td>Craig Roberts</td>\n",
-       "      <td>Amber Stevens West</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>50000000</td>\n",
-       "      <td>331000000</td>\n",
-       "      <td>55.55</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>281000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>7.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>27 Dresses</td>\n",
-       "      <td>Anne Fletcher</td>\n",
-       "      <td>111</td>\n",
-       "      <td>Judy Greer</td>\n",
-       "      <td>Bern Cohen</td>\n",
-       "      <td>Yetta Gottesman</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>160000000</td>\n",
-       "      <td>77.00</td>\n",
-       "      <td>60.00</td>\n",
-       "      <td>130000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>6.1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Movie           Director  Running time            Actor 1  \\\n",
-       "0          13 Hours        Michael Bay           144      Toby Stephens   \n",
-       "1         16 Blocks     Richard Donner           102       Bruce Willis   \n",
-       "2          17 Again        Burr Steers           102      Matthew Perry   \n",
-       "3              1982       Tommy Oliver            90    Bokeem Woodbine   \n",
-       "4  2 Fast 2 Furious     John Singleton           107        Paul Walker   \n",
-       "5            2 Guns  Baltasar Kormákur           109  Denzel Washington   \n",
-       "6              2012    Roland Emmerich           158       Oliver Platt   \n",
-       "7                21     Robert Luketic           123       Kevin Spacey   \n",
-       "8    22 Jump Street          Phil Lord           112     Channing Tatum   \n",
-       "9        27 Dresses      Anne Fletcher           111         Judy Greer   \n",
+       "      Movie     Director  Running time        Actor 1           Actor 2  \\\n",
+       "0  13 Hours  Michael Bay           144  Toby Stephens  James Badge Dale   \n",
        "\n",
-       "            Actor 2             Actor 3   Genre     Budget  Box Office  \\\n",
-       "0  James Badge Dale     David Costabile  Action   50000000    69400000   \n",
-       "1       David Zayas          Sasha Roiz  Action   52000000    65000000   \n",
-       "2    Hunter Parrish       Thomas Lennon  Comedy   20000000   139000000   \n",
-       "3          Ruby Dee       Quinton Aaron   Drama    1000000     2000000   \n",
-       "4       Cole Hauser          Mo Gallini  Action   76000000   236000000   \n",
-       "5  Patrick Fischler           Fred Ward  Action   61000000   132000000   \n",
-       "6        Liam James        Tom McCarthy  Action  200000000   800000000   \n",
-       "7      Jim Sturgess            Josh Gad   Crime   35000000    81000000   \n",
-       "8     Craig Roberts  Amber Stevens West  Action   50000000   331000000   \n",
-       "9        Bern Cohen     Yetta Gottesman  Comedy   30000000   160000000   \n",
+       "           Actor 3   Genre    Budget  Box Office  Actors Box Office %  \\\n",
+       "0  David Costabile  Action  50000000    69400000                 50.0   \n",
        "\n",
-       "   Actors Box Office %  Director Box Office %   Earnings  \\\n",
-       "0                50.00                  69.23   19400000   \n",
-       "1                33.33                  50.00   13000000   \n",
-       "2                44.44                  25.00  119000000   \n",
-       "3                50.00                 100.00    1000000   \n",
-       "4                75.00                  42.85  160000000   \n",
-       "5                66.67                 100.00   71000000   \n",
-       "6                63.88                  50.00  600000000   \n",
-       "7                61.00                  66.67   46000000   \n",
-       "8                55.55                 100.00  281000000   \n",
-       "9                77.00                  60.00  130000000   \n",
+       "   Director Box Office %  Earnings  Oscar and Golden Globes nominations  \\\n",
+       "0                  69.23  19400000                                    0   \n",
        "\n",
-       "   Oscar and Golden Globes nominations  Oscar and Golden Globes awards  \\\n",
-       "0                                    0                             0.0   \n",
-       "1                                    0                             0.0   \n",
-       "2                                    0                             0.0   \n",
-       "3                                    0                             0.0   \n",
-       "4                                    0                             0.0   \n",
-       "5                                    0                             0.0   \n",
-       "6                                    0                             0.0   \n",
-       "7                                    0                             0.0   \n",
-       "8                                    0                             0.0   \n",
-       "9                                    0                             0.0   \n",
-       "\n",
-       "   Release year  IMDb score  \n",
-       "0          2016         7.4  \n",
-       "1          2006         6.6  \n",
-       "2          2009         6.4  \n",
-       "3          2013         7.1  \n",
-       "4          2003         5.9  \n",
-       "5          2013         6.7  \n",
-       "6          2009         5.8  \n",
-       "7          2008         6.8  \n",
-       "8          2014         7.1  \n",
-       "9          2008         6.1  "
+       "   Oscar and Golden Globes awards  Release year  IMDb score  \n",
+       "0                             0.0          2016         7.4  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,22 +91,69 @@
     "import pandas as pd\n",
     "\n",
     "'''\n",
-    "Planned Features:\n",
+    "Planned Features\n",
+    "---------------------\n",
+    "Star power:     The combined number of times the 3 actors of a movie appear in the dataset\n",
+    "Running Time:   The duration of the movie\n",
+    "Budget:         The budget of the movie\n",
+    "Genre:          Genre of the the movie\n",
     "\n",
-    "Star power: The combined number of times the 3 actors of a movie appear in the dataset\n",
-    "Title length: The length of the movie name\n",
-    "Running Time: The duration of the movie\n",
-    "Budget: The budget of the movie\n",
-    "Genre: Genre of the the movie\n",
-    "\n",
-    "Class to be predicted:\n",
+    "Predicted Class\n",
+    "---------------------\n",
     "Success Rating: Calculated as Box Office / Budget\n",
     "\n",
     "\n",
     "'''\n",
     "\n",
     "df = pd.read_csv('movies_data.csv', encoding='ISO-8859-1')\n",
-    "df.head(10)"
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marvin's Room 82.0\n",
+      "The Big Wedding 76.0\n",
+      "Joy 75.0\n",
+      "Silver Linings Playbook 75.0\n",
+      "The Expendables 2 74.0\n",
+      "Cop Land 74.0\n",
+      "The Expendables 3 72.0\n",
+      "Last Vegas 71.0\n",
+      "Batman Begins 70.0\n",
+      "Sleepers 70.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Calculating Star Power\n",
+    "1. Create a dictionary to count how many times each actor apears in the dataset\n",
+    "'''\n",
+    "\n",
+    "actor_freq = dict()\n",
+    "actor_columns = ['Actor 1', 'Actor 2', 'Actor 3']\n",
+    "for name in df['Actor 1']:\n",
+    "    if name in actor_freq:\n",
+    "        actor_freq[name] += 1\n",
+    "    else:\n",
+    "        actor_freq[name] = 1\n",
+    "\n",
+    "df['star_power'] = df['Actor 1'].map(actor_freq) + df['Actor 2'].map(actor_freq) + df['Actor 3'].map(actor_freq)\n",
+    "df['star_power'] = df['star_power'].fillna(0)\n",
+    "\n",
+    "i = 0\n",
+    "for e0, e1 in sorted(zip(df['Movie'], df['star_power']), key=lambda x: x[1], reverse=True):\n",
+    "    if i == 10:\n",
+    "        break\n",
+    "    print(e0, e1)\n",
+    "    i += 1"
    ]
   },
   {
