movie_prediction.ipynb

--- a/movie_prediction.ipynb
+++ b/movie_prediction.ipynb
@@ -447,7 +447,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Cross-Validation Accuracy: 0.9305 ± 0.0076\n"
+      "Cross-Validation Accuracy: 0.9305 ± 0.0076\n"
      ]
     }
    ],
@@ -469,7 +469,7 @@
     ")\n",
     "\n",
     "cv_scores = cross_val_score(rf_model, X_train, y_train, cv=5, scoring=\"accuracy\")\n",
-    "print(f\"✅ Cross-Validation Accuracy: {cv_scores.mean():.4f} ± {cv_scores.std():.4f}\")\n"
+    "print(f\"Cross-Validation Accuracy: {cv_scores.mean():.4f} ± {cv_scores.std():.4f}\")\n"
    ]
   },
   {
@@ -513,7 +513,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔍 Training Accuracy: 0.9733\n"
+      "Training Accuracy: 0.9733\n"
      ]
     }
    ],
@@ -533,7 +533,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Cross-Validation Accuracy: 0.9305 ± 0.0076\n"
+      "Cross-Validation Accuracy: 0.9305 ± 0.0076\n"
      ]
     }
    ],
