Updated movie_prediction.ipynb with latest changes

--- a/movie_prediction.ipynb
+++ b/movie_prediction.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
     "all_actors = df[['Actor 1', 'Actor 2', 'Actor 3']].values.flatten()\n",
     "actor_counts = Counter(all_actors)\n",
     "\n",
-    "# 计算 Star Power（Actor1 > Actor2 > Actor3）\n",
+    "# Calculate Star Power（Actor1 > Actor2 > Actor3）\n",
     "df['star_power'] = df.apply(lambda row: \n",
     "    1.5 * actor_counts[row['Actor 1']] + \n",
     "    1.2 * actor_counts[row['Actor 2']] + \n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42, stratify=y_temp)\n",
     "\n",
-    "# normalization\n",
+    "# Normalization\n",
     "scaler = MinMaxScaler()\n",
     "X_train[feature_columns] = scaler.fit_transform(X_train[feature_columns])\n",
     "X_val[feature_columns] = scaler.transform(X_val[feature_columns])\n",
