--- a/movie_prediction.ipynb
+++ b/movie_prediction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "2                             0.0          2009         6.4  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,14 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now star_power` calculated successfully.\n"
+      "star_power calculated\n"
      ]
     }
    ],
@@ -188,19 +188,19 @@
     "    1.0 * actor_counts[row['Actor 3']], axis=1)\n",
     "\n",
     "df['star_power'] = df['star_power'].fillna(0)\n",
-    "print(\"Now star_power` calculated successfully.\")\n"
+    "print(\"star_power calculated\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now director_power` calculated successfully.\n"
+      "director_power calculated\n"
      ]
     }
    ],
@@ -212,19 +212,19 @@
     "\n",
     "director_counts = Counter(df['Director'])\n",
     "df['director_power'] = df['Director'].map(director_counts).fillna(0)\n",
-    "print(\"Now director_power` calculated successfully.\")\n"
+    "print(\"director_power calculated\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now is_hit` column created successfully.\n"
+      "is_hit calculated from success_rating\n"
      ]
     }
    ],
@@ -237,19 +237,19 @@
     "\n",
     "df['success_rating'] = df['Box Office'] / df['Budget']\n",
     "df['is_hit'] = (df['success_rating'] >= 3).astype(int)\n",
-    "print(\"Now is_hit` column created successfully.\")\n"
+    "print(\"is_hit calculated from success_rating\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now actor_success_rate` and `director_success_rate` calculated successfully!\n"
+      "actor_success_rate and director_success_rate calculated\n"
      ]
     }
    ],
@@ -289,19 +289,19 @@
     "\n",
     "df['director_success_rate'] = df['Director'].map(director_success_rate)\n",
     "\n",
-    "print(\"Now actor_success_rate` and `director_success_rate` calculated successfully!\")\n"
+    "print(\"actor_success_rate and director_success_rate calculated\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Now title_length` recalculated successfully.\n"
+      "title_length calculated\n"
      ]
     }
    ],
@@ -310,12 +310,12 @@
     "Recalculating Title Length\n",
     "'''\n",
     "df['title_length'] = df['Movie'].apply(len)\n",
-    "print(\"Now title_length` recalculated successfully.\")\n"
+    "print(\"title_length calculated\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -328,44 +328,36 @@
    ],
    "source": [
     "'''\n",
-    "One-hot Encoding for Genre - Ensuring it's already processed\n",
+    "One-hot Encoding for Genre\n",
     "'''\n",
     "\n",
     "genre_columns = [col for col in df.columns if col.startswith('Genre_')]\n",
     "\n",
-    "if genre_columns:\n",
-    "    print(f\"Genre One-hot Encoding already exists with {len(genre_columns)} categories.\")\n",
-    "else:\n",
-    "    # Make sure genre exists\n",
-    "    if 'Genre' in df.columns:\n",
+    "df['Genre'] = df['Genre'].fillna(\"Unknown\").replace(\"\", \"Unknown\")\n",
     "\n",
-    "        df['Genre'] = df['Genre'].fillna(\"Unknown\").replace(\"\", \"Unknown\")\n",
+    "df = df.assign(Genre=df['Genre'].str.split(', ')).explode('Genre')\n",
     "\n",
-    "        df = df.assign(Genre=df['Genre'].str.split(', ')).explode('Genre')\n",
+    "# One hot encoding\n",
+    "df = pd.get_dummies(df, columns=['Genre'])\n",
     "\n",
-    "        # One-hot Encoding\n",
-    "        df = pd.get_dummies(df, columns=['Genre'])\n",
+    "# Make sure every movie belongs to at least one genre\n",
+    "genre_columns = [col for col in df.columns if col.startswith('Genre_')]\n",
+    "df['genre_sum'] = df[genre_columns].sum(axis=1)\n",
     "\n",
-    "        # Make sure every movie belongs to at least one genre\n",
-    "        genre_columns = [col for col in df.columns if col.startswith('Genre_')]\n",
-    "        df['genre_sum'] = df[genre_columns].sum(axis=1)\n",
+    "if (df['genre_sum'] == 0).sum() > 0:\n",
+    "    print(\"Some movies have no assigned genre. Assigning `Genre_Unknown` as True.\")\n",
+    "    if 'Genre_Unknown' not in df.columns:\n",
+    "        df['Genre_Unknown'] = 0\n",
+    "    df.loc[df['genre_sum'] == 0, 'Genre_Unknown'] = 1\n",
     "\n",
-    "        if (df['genre_sum'] == 0).sum() > 0:\n",
-    "            print(\"Some movies have no assigned genre. Assigning `Genre_Unknown` as True.\")\n",
-    "            if 'Genre_Unknown' not in df.columns:\n",
-    "                df['Genre_Unknown'] = 0\n",
-    "            df.loc[df['genre_sum'] == 0, 'Genre_Unknown'] = 1\n",
+    "df.drop(columns=['genre_sum'], inplace=True)\n",
     "\n",
-    "        df.drop(columns=['genre_sum'], inplace=True)\n",
-    "\n",
-    "        print(\"Genre One-hot Encoding completed.\")\n",
-    "    else:\n",
-    "        raise KeyError(\"Column 'Genre' not found in DataFrame! Check if One-hot Encoding has already been applied.\")\n"
+    "print(\"Genre One-hot Encoding completed.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -409,14 +401,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data split completed! Train Size: (3179, 23), Validation Size: (397, 23), Test Size: (398, 23)\n"
+      "Train Size: (3179, 23), Validation Size: (397, 23), Test Size: (398, 23)\n"
      ]
     }
    ],
@@ -443,60 +435,38 @@
     "X_val[feature_columns] = scaler.transform(X_val[feature_columns])\n",
     "X_test[feature_columns] = scaler.transform(X_test[feature_columns])\n",
     "\n",
-    "print(f\"Data split completed! Train Size: {X_train.shape}, Validation Size: {X_val.shape}, Test Size: {X_test.shape}\")\n"
+    "print(f\"Train Size: {X_train.shape}, Validation Size: {X_val.shape}, Test Size: {X_test.shape}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Hyperparameters: {'class_weight': {0: 1, 1: 6}, 'max_depth': 30, 'max_features': 'sqrt', 'min_samples_leaf': 1, 'min_samples_split': 5, 'n_estimators': 1356, 'random_state': 42}\n",
-      "Optimized RandomForest Validation Accuracy: 0.9395\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.98      0.92      0.95       251\n",
-      "           1       0.88      0.97      0.92       146\n",
-      "\n",
-      "    accuracy                           0.94       397\n",
-      "   macro avg       0.93      0.95      0.94       397\n",
-      "weighted avg       0.94      0.94      0.94       397\n",
-      "\n",
-      "[[232  19]\n",
-      " [  5 141]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
-    "Hyperparameter Tuning with RandomizedSearchCV for RandomForest\n",
+    "Hyperparameter Tuning\n",
     "'''\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from scipy.stats import randint\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "\n",
-    "# Define the hyperparameter search space\n",
     "param_dist = {\n",
-    "    'n_estimators': randint(500, 2000),  # Randomly select between 500 and 2000\n",
-    "    'max_depth': [20, 30, None],  # Limit the maximum depth of trees\n",
-    "    'min_samples_split': randint(2, 10),  # Minimum number of samples required to split an internal node\n",
-    "    'min_samples_leaf': randint(1, 4),  # Minimum number of samples required at a leaf node\n",
-    "    'max_features': ['sqrt'],  # Fixed max_features as 'sqrt'\n",
+    "    'n_estimators': randint(500, 2000),\n",
+    "    'max_depth': [20, 30, None],\n",
+    "    'min_samples_split': randint(2, 10),\n",
+    "    'min_samples_leaf': randint(1, 4),\n",
+    "    'max_features': ['sqrt'],\n",
     "    'class_weight': [{0: 1, 1: 6}],\n",
     "    'random_state': [42]\n",
     "}\n",
     "\n",
-    "# Run RandomizedSearchCV for hyperparameter tuning\n",
     "rf = RandomForestClassifier(n_jobs=-1)\n",
     "random_search = RandomizedSearchCV(\n",
     "    rf, param_dist,\n",
-    "    n_iter=15,  # Search 15 sets of hyperparameters (faster than GridSearchCV)\n",
-    "    cv=3,  # 3-fold cross-validation\n",
+    "    n_iter=15,\n",
+    "    cv=3,\n",
     "    scoring='accuracy',\n",
     "    random_state=42,\n",
     "    n_jobs=-1\n",
@@ -504,17 +474,14 @@
     "\n",
     "random_search.fit(X_train, y_train)\n",
     "\n",
-    "# Get the best hyperparameters\n",
     "best_params = random_search.best_params_\n",
-    "print(f\"Best Hyperparameters: {best_params}\")\n",
+    "print(f\"Best hyperparameters: {best_params}\")\n",
     "\n",
-    "# Train the final model using the best hyperparameters\n",
     "best_rf_model = random_search.best_estimator_\n",
     "\n",
-    "# Evaluate the best model\n",
     "y_val_pred = best_rf_model.predict(X_val)\n",
     "\n",
-    "print(f\"Optimized RandomForest Validation Accuracy: {accuracy_score(y_val, y_val_pred):.4f}\")\n",
+    "print(f\"Optimized random forset validation accuracy: {accuracy_score(y_val, y_val_pred):.4f}\")\n",
     "print(classification_report(y_val, y_val_pred))\n",
     "print(confusion_matrix(y_val, y_val_pred))\n"
    ]
@@ -536,10 +503,11 @@
     }
    ],
    "source": [
+    "'''Confusion matrix'''\n",
+    "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Show confusion matrix\n",
     "plt.figure(figsize=(6,4))\n",
     "sns.heatmap(confusion_matrix(y_val, y_val_pred), annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=[\"Not Hit\", \"Hit\"], yticklabels=[\"Not Hit\", \"Hit\"])\n",
     "plt.xlabel(\"Predicted Label\")\n",
@@ -565,11 +533,10 @@
     }
    ],
    "source": [
-    "# The most important features\n",
+    "# Feature importance\n",
     "feature_importances = best_rf_model.feature_importances_\n",
     "feature_names = X_train.columns\n",
     "\n",
-    "# Show feature importance in graph\n",
     "plt.figure(figsize=(8,5))\n",
     "sns.barplot(x=feature_importances, y=feature_names)\n",
     "plt.xlabel(\"Feature Importance Score\")\n",
